--- a/code07/4/02-代码/框架结构/08-extend优化1.html
+++ b/code07/4/02-代码/框架结构/08-extend优化1.html
@@ -228,44 +228,35 @@
                 //5.3、实现链式编程
                 return this;
             }
-
-
         };
 
-        //itcast.extend({ a:10 })
-        //var o={}; itcast.extend(o,{c:30,d:50})
         //添加extend方法：
         itcast.extend=itcast.fn.extend=function(){
-            //声明2个变量，目标对象、源对象
-            var target,sources=[];
 
-            if(arguments.length===0) return this;
+            var target,sources = [];
 
-            if(arguments.length===1){
-                //1、参数个数为1：目标对象就是当前对象；源对象：第一个实参
-                target=this;  //taget=itcast
-                sources.push(arguments[0]); //sources=[{a:10}]
+            if(arguments.length ==0) return this;
+            //参数个数为1
+            var arg0 = arguments[0];
+            if(arguments.length ==1){
+                target = this;
+                sources.push(arguments[0]);
             }else{
-                //2、参数个数>1：
-                //2.1、设置目标对象：第一个实参
-                target=arguments[0];                            //target=o
-                //2.2、设置源对象：第二个以及之后的实参
-                sources.push.apply(sources,arguments);          //sources=[o,{c:30,d:50}]
-                sources.splice(0,1);                            //sources=[{c:30,d:50}]
+                var target = arguments[0];
+                sources.push.apply(sources,arguments);
+                sources.splice(0,1);
             }
-            //3、直接遍历sources
-            for (var i = 0; i < sources.length; i++) {
-                var source = sources[i]; //source={a:10}        //source={c:30,d:50}
-                //4、遍历源对象source
-                for (var key in source) {                       //"c"-->o["c"]=source["c"]=30
-                    //5、设置目标对象的指定属性
-                    target[key]=source[key];  //itcast["a"]=source["a"]=10
+
+
+            for(var i =0;i<sources.length;i++){
+                var source = sources[i];
+                for(var key in source){
+                    target[key] = source[key];
                 }
             }
-            //5、返回目标对象
             return target;
-
-        }
+            //参数个数大于1
+        };
 
         //6、让F的原型指向itcast的原型——>让F类型的对象都可以调用itcast原型中的属性、方法
         itcast.fn.F.prototype=itcast.prototype;
