--- a/code07/6/代码/03-DOM操作模块/02-appendTo方法.html
+++ b/code07/6/代码/03-DOM操作模块/02-appendTo方法.html
@@ -6,7 +6,8 @@
     <script src="itcast.js"></script>
     <script>
         itcast.fn.extend({
-            appendTo: function (selector) {
+            fuck:{}
+            ,appendTo: function (selector) {
                 var $parents = itcast(selector);
 
                 //this:-->{0:input,1:input,length:2}
