--- a/code07/7/20160803/02-事件模块/02-事件委托.html
+++ b/code07/7/20160803/02-事件模块/02-事件委托.html
@@ -17,5 +17,15 @@
             //d2的单击操作
         }
     });
+
+    document.body.addEventListener('click',function (e) {
+        if(e.target.id ==="d1"){
+
+
+        }else if(e.target.id ==="d2"){
+
+        }
+    })
+
 </script>
 </html>
